<resources>
    <string name="app_name">HBV2</string>
    <string name="user_logout">Skrá út</string>

    <string name="general_error">Villa hefur komið upp. Vinsamlegast reynið aftur.</string>

    <string name="menu_change_user">Breyta Notendaupplýsingum</string>

    <string name="log_out_text">Skrá út</string>

    <string name="snackbar_undo">Afturkalla</string>

    <string name="yes">Já</string>
    <string name="no">Nei</string>

    <string name="login_text">Skrá inn</string>
    <string name="login_email">Tölvupóstur</string>
    <string name="login_password">Lykilorð</string>

    <string name="signup_text">Búa til aðgang</string>
    <string name="signup_name">Nafn</string>
    <string name="signup_ssn">Kennitala</string>
    <string name="signup_phoneNumber">Símanúmer</string>
    <string name="signup_address">Heimilisfang</string>
    <string name="signup_email">Tölvupóstur</string>
    <string name="signup_password">Lykilorð</string>
    <string name="invalid_address">Vinamlegast sláðu inn gilt heimilisfang</string>
    <string name="empty_fields">Vinsamlegast fyllið í alla reiti</string>

    <!-- UserFragment -->
    <string name="user_view">Upplýsingar notanda</string>
    <string name="user_name">"Notandi: "</string>
    <string name="name">Nafn</string>
    <string name="phoneNumber">"Símanúmer: "</string>
    <string name="address">"Heimilisfang: "</string>
    <string name="email">"Netfang: "</string>
    <string name="specialization">"Sérhæfing: "</string>

    <!-- Edit User -->
    <string name="edit_user">Breyta notendaupplýsingum</string>
    <string name="edit_confirm">Uppfæra</string>
    <string name="edit_error_name">Nafn ólölegt</string>
    <string name="edit_error_phoneNr">Símanúmer ólölegt</string>
    <string name="edit_error_address">Heimilisfang ólölegt</string>
    <string name="edit_error_email">Netfang ólölegt</string>
    <string name="edit_text">Breyta upplýsingum\n</string>
    <string name="edit_delete">Eyða aðgangi</string>
    <string name="delete_user_warning">Ertu viss um að þú viljir eyða aðganginum?</string>

    <!-- Register to Waiting List -->
    <string name="register_waiting_list_title">Senda fyrirspurn</string>
    <string name="register_waiting_list">Senda fyrirspurn á biðlista</string>
    <string name="register_waiting_list_detail">Lýsing á vandamáli</string>
    <string name="register_waiting_list_conform">Senda fyrirspurn</string>
    <string name="register_waiting_list_error">Vantar lýsingu</string>

    <!-- Waiting List Request Overview -->
    <string name="waiting_list_title">Yfirlit yfir fyrirspurn</string>
    <string name="waiting_list_info">Fyrirspurn á biðlista:</string>
    <string name="waiting_list_info_date">Dagsetning: </string>
    <string name="waiting_list_info_priority">Forgangur: </string>
    <string name="waiting_list_info_bodyPart">Líkamshluti: </string>
    <string name="waiting_list_info_description">Lýsing: </string>
    <string name="waiting_list_info_physiotherapist">Sjúkraþjálfari: </string>
    <string name="waiting_list_info_status">Staða fyrirspurnar: </string>
    <string name="answer_questionnaire">Svara spurningalista</string>
    <string name="questionnaire_answered">Spurningalista svarað</string>
    <string name="waiting_list_request_accepted">Samþykkt</string>
    <string name="waiting_list_request_pending">Í Bið</string>
    <string name="delete_request_warning">Ertu viss um að þú viljir eyða fyrirspurninni?</string>

    <!-- Bundles -->
    <string name="logged_in_user">loggedInUser</string>
    <string name="edited_user">editedUser</string>
    <string name="waiting_list_request">waitingListRequest</string>
    <string name="questionnaire">questionnaire</string>
    <string name="question">question</string>
    <string name="question_answer_group">questionAnswerGroup</string>

    <string name="questions">Spurningar</string>
    <string name="next_question_button">Næsta spurning</string>
    <string name="go_home_button">Heimasíða</string>

    <string name="user_overview_header_text">Yfirlit notendur</string>
    <string name="user_overview_button_text">Uppfæra</string>
    <string name="user_questionnaire_answers_overview_header_text">Svör við spurningalista</string>

    <!-- WaitingListRequestsOverview -->
    <string name="requests_overview_header_text">Yfirlit yfir Fyrirspurnir</string>
    <string name="view_button_text">Skoða</string>
    <string name="requests_overview_accept_button_text">Samþykkja</string>
    <string name="delete_button_text">Eyða</string>
    <string name="requests_overview_no_requests_text">Engar Fyrirspurnir skráðar</string>
    <string name="requests_overview_sort_spinner_hint">Raða eftir:</string>
    <string-array name="requests_overview_physio_sort_options">
        <item>Forgangur</item>
        <item>Dagsetning</item>
        <item>Nafn sjúklings</item>
        <item>Líkamshluti</item>
        <item>Staða</item>
    </string-array>
    <string-array name="requests_overview_reception_sort_options">
        <item>Forgangur</item>
        <item>Dagsetning</item>
        <item>Nafn sjúklings</item>
        <item>Staða</item>
    </string-array>

    <!-- EditWaitingListRequest -->
    <string name="edit_request_title">Breyta Fyrirspurn</string>
    <string name="edit_request_priority">Forgangur</string>
    <string name="edit_request_button_text">Uppfæra</string>

    <!-- QuestionnaireOverview -->
    <string name="questionnaire_overview_header_text">Yfirlit yfir Spurningalista</string>
    <string name="questionnaire_overview_no_questionnaires_text">Engir Spurningalistar skráðar</string>
    <string name="questionnaire_show_button_text">Sýna á skráningarformi</string>
    <string name="questionnaire_hide_button_text">Taka af skráningarformi</string>
    <string name="questionnaire_deleted_snackbar_text">Spurningalista eytt</string>
    <string name="questionnaire_displayed_snackbar_text">Spurningalisti birtur á skráningarformi</string>
    <string name="questionnaire_not_displayed_snackbar_text">Spurningalisti tekinn af skráningarformi</string>
    <string name="questionnaire_missing_name_error">Nafn Spurningalista vantar</string>
    <string name="new_questionnaire_text">Nýr Spurningalisti</string>
    <string name="questionnaire_no_of_questions_text">Fjöldi Spurninga:</string>
    <string name="questionnaire_no_of_questions_placeholder">00</string>
    <string name="questionnaire_delete_error">Ekki hægt að eyða spurningalista. Gaktu úr skugga um að hann sé ekki tengdur fyrirspurnum</string>
    <string-array name="questionnaire_overview_sort_options">
        <item>Nafn</item>
        <item>Fjöldi Spurninga</item>
        <item>Birting</item>
    </string-array>

    <!-- Edit Questionnaire -->
    <string name="edit_questionnaire_header_text">Breyta Spurningalista</string>
    <string name="questionnaire_name_text">Nafn Spurningalista</string>
    <string name="save_text">Vista</string>
    <string name="add_question_button_text">Bæta við</string>
    <string name="remove_question_button_text">Fjarlægja</string>
    <string name="new_question_text">Ný spurning</string>
    <string name="edit_questionnaire_no_questions_text">Engar spurningar fundust</string>
    <string name="save_snackbar_text">Vistað</string>
    <string name="question_weight_text">Þyngd: </string>
    <string name="question_no_of_answers_text">Svarhópur:</string>
    <string name="question_no_of_answers_placeholder">XXXXX/XXXXX</string>
    <string name="question_weight_placeholder">00.0</string>

    <!-- EditQuestion -->
    <string name="edit_question_header_text">Breyta Spurningu</string>
    <string name="new_question_header_text">Breyta Spurningu</string>
    <string name="question_text">Spurning</string>
    <string name="question_weight">Þyngd</string>
    <string name="question_text_header">Spurning:</string>
    <string name="question_no_text_error">Spurning má ekki vera tóm</string>
    <string name="question_no_weight_error">Þyngd má ekki vera tóm</string>
    <string name="edit_question_answer_group">Breyta</string>
    <string name="new_question_answer_group">Nýtt</string>
    <string name="question_delete_error">Ekki hægt að eyða spurningu. Gaktu úr skugga um að hún sé ekki tengd öðrum spurningalistum</string>
    <string name="question_deleted_snackbar_text">Spurningu eytt</string>
    <string name="question_restored_snackbar_text">Spurning endurheimtuð</string>
    <string name="question_no_answer_group_error">Vinsamlegast veldur svarhóp eða búðu til nýjan</string>

    <!-- EditQuestionAnswerGroup -->
    <string name="edit_question_answer_group_header">Breyta Svarhóp</string>
    <string name="new_question_answer_group_header">Nýr Svarhópur</string>
    <string name="question_answer_group_name">Nafn Hóps</string>
    <string name="question_answer_group_answers_title">Svarmöguleikar</string>
    <string name="question_answer_group_add_answer">Bæta við svarmöguleika</string>
    <string name="question_answer_group_hint">Svarmöguleiki</string>
    <string name="empty_question_answer_group_name_error">Svarmöguleiki verður að hafa nafn</string>
    <string name="empty_question_answer_option_error">Svarmöguleiki má ekki vera tómur</string>
    <string name="question_answer_group_deleted_snackbar_text">Svarhóp eytt</string>
    <string name="question_answer_group_restored_snackbar_text">Svarhópur endurheimtaður</string>
    <string name="question_answer_group_delete_error">Ekki hægt að eyða svarhóp. Gaktu úr skugga um að hann sé ekki tengdur öðrum spurningum</string>
    <string name="question_answer_group_min_answers_error">Ekki hægt að vista svarhóp. Það verða að vera að minnsta kosti tveir svarmöguleikar.</string>
</resources>