<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_waiting_list_request"
            android:title="@string/waiting_list_title" />
        <item
            android:id="@+id/nav_waiting_list_overview"
            android:title="@string/requests_overview_header_text" />
        <item
            android:id="@+id/nav_users_overview"
            android:title="@string/user_overview_header_text" />
        <item
            android:id="@+id/nav_user_fragment"
            android:title="@string/user_view" />
        <item
            android:id="@+id/nav_questionnaire_overview"
            android:title="@string/questionnaire_overview_header_text" />
    </group>
</menu>