<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_user_fragment">

    <fragment
        android:id="@+id/nav_user_fragment"
        android:name="is.hi.afk6.hbv2.ui.fragment.user.UserFragment"
        android:label="@string/user_view"
        android:layout="@layout/fragment_user">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />

    </fragment>

    <fragment
        android:id="@+id/nav_waiting_list_overview"
        android:name="is.hi.afk6.hbv2.ui.fragment.waitingListRequest.WaitingListRequestOverviewFragment"
        android:label="@string/requests_overview_header_text"
        android:layout="@layout/fragment_waiting_list_request_overview">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_waiting_list_request"
        android:name="is.hi.afk6.hbv2.ui.fragment.waitingListRequest.CreateWaitingListRequestFragment"
        android:label="@string/register_waiting_list_title"
        android:layout="@layout/fragment_create_waiting_list_request">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />

    </fragment>

    <fragment
        android:id="@+id/nav_waiting_list_request"
        android:name="is.hi.afk6.hbv2.ui.fragment.waitingListRequest.WaitingListRequestFragment"
        android:label="@string/waiting_list_title"
        android:layout="@layout/fragment_waiting_list_request">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
        <argument
            android:name="@string/waiting_list_request"
            app:argType="is.hi.afk6.hbv2.entities.WaitingListRequest" />

    </fragment>

    <fragment
        android:id="@+id/nav_edit_user"
        android:name="is.hi.afk6.hbv2.ui.fragment.user.EditUserFragment"
        android:label="@string/edit_user"
        android:layout="@layout/fragment_edit_user">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_users_overview"
        android:name="is.hi.afk6.hbv2.ui.fragment.user.UsersOverviewFragment"
        android:label="@string/user_overview_header_text"
        android:layout="@layout/fragment_users_overview">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_answer_questionnaire"
        android:name="is.hi.afk6.hbv2.ui.fragment.questionnaire.AnswerQuestionnaireFragment"
        android:label="@string/answer_questionnaire"
        android:layout="@layout/fragment_answer_questionnaire">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
        <argument
            android:name="@string/waiting_list_request"
            app:argType="is.hi.afk6.hbv2.entities.WaitingListRequest" />
        <argument
            android:name="@string/questionnaire"
            app:argType="is.hi.afk6.hbv2.entities.Questionnaire" />
    </fragment>

    <fragment
        android:id="@+id/nav_view_questionnaire_answers"
        android:name="is.hi.afk6.hbv2.ui.fragment.questionnaire.ViewQuesionnaireAnswersFragment"
        android:label="@string/user_questionnaire_answers_overview_header_text" />

    <fragment
        android:id="@+id/nav_edit_waiting_list_request"
        android:name="is.hi.afk6.hbv2.ui.fragment.waitingListRequest.EditWaitingListRequestFragment"
        android:label="@string/edit_request_title"
        android:layout="@layout/fragment_edit_waiting_list_request">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
        <argument
            android:name="@string/waiting_list_request"
            app:argType="is.hi.afk6.hbv2.entities.WaitingListRequest" />
    </fragment>

    <fragment
        android:id="@+id/nav_questionnaire_overview"
        android:name="is.hi.afk6.hbv2.ui.fragment.questionnaire.QuestionnaireOverviewFragment"
        android:label="@string/questionnaire_overview_header_text"
        android:layout="@layout/fragment_questionnaire_overview">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_questionnaire"
        android:name="is.hi.afk6.hbv2.ui.fragment.questionnaire.EditQuestionnaireFragment"
        android:label="@string/edit_questionnaire_header_text"
        android:layout="@layout/fragment_edit_questionnaire">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
        <argument
            android:name="@string/questionnaire"
            app:argType="is.hi.afk6.hbv2.entities.Questionnaire" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_question"
        android:name="is.hi.afk6.hbv2.ui.fragment.question.EditQuestionFragment"
        android:label="@string/edit_question_header_text"
        android:layout="@layout/fragment_edit_question">
        <argument
            android:name="@string/logged_in_user"
            app:argType="is.hi.afk6.hbv2.entities.User" />
        <argument
            android:name="@string/question"
            app:argType="is.hi.afk6.hbv2.entities.Question" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_question_answer_group"
        android:name="is.hi.afk6.hbv2.ui.fragment.questionAnswerGroup.EditQuestionAnswerGroupFragment"
        android:label="@string/edit_question_answer_group_header"
        android:layout="@layout/fragment_edit_question_answer_group">
        <argument
            android:name="@string/question_answer_group"
            app:argType="is.hi.afk6.hbv2.entities.QuestionAnswerGroup" />
    </fragment>

</navigation>