<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/vertical_bias">

        <TextView
            android:id="@+id/edit_text"
            style="@style/Theme.HBV2.HeaderTextStyle"
            android:text="@string/edit_text"
             />

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                style="@style/Theme.HBV2.InputTextAreaStyle"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text" />

            <TextView
                android:id="@+id/edit_error_name"
                style="@style/Theme.HBV2.ErrorTextStyle"
                android:text="@string/edit_error_name" />

            <EditText
                android:id="@+id/edit_phone"
                style="@style/Theme.HBV2.InputTextAreaStyle"
                android:autofillHints=""
                android:hint="@string/phoneNumber"
                android:inputType="phone" />

            <TextView
                android:id="@+id/edit_error_phoneNr"
                style="@style/Theme.HBV2.ErrorTextStyle"
                android:text="@string/edit_error_phoneNr" />

            <EditText
                android:id="@+id/edit_address"
                style="@style/Theme.HBV2.InputTextAreaStyle"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="text" />

            <TextView
                android:id="@+id/edit_error_address"
                style="@style/Theme.HBV2.ErrorTextStyle"
                android:text="@string/edit_error_address" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/Theme.HBV2.InputTextAreaStyle"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/edit_error_email"
                style="@style/Theme.HBV2.ErrorTextStyle"
                android:text="@string/edit_error_email"
                android:visibility="invisible"
                />

            <EditText
                android:id="@+id/edit_staff_specialization"
                style="@style/Theme.HBV2.InputTextAreaStyle"
                android:autofillHints=""
                android:hint="@string/specialization"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:id="@+id/edit_staff_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Spinner
                    android:id="@+id/staff_role_spinner"
                    style="@style/Theme.HBV2.SpinnerStyle" />

                <ProgressBar
                    android:id="@+id/staff_role_spinner_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_edit_sumbit"
                style="@style/Theme.HBV2.ButtonStyle"
                android:layout_gravity="center"
                android:text="@string/edit_confirm" />


        </LinearLayout>

        <Button
            android:id="@+id/edit_delete_button"
            style="@style/Theme.HBV2.ButtonStyle"
            android:layout_gravity="center"
            android:text="@string/edit_delete"
            app:layout_constraintTop_toBottomOf="@+id/edit_layout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>