<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frameLayout"
        style="@style/Theme.HBV2.FormLayoutStyle"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/Theme.HBV2.HeaderTextStyle"
            android:layout_marginBottom="@dimen/fragment_margin"
            android:text="@string/user_view"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/touch_height"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_wrapper_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_info_name"
                    style="@style/Theme.HBV2.TextViewStyle"
                    android:layout_marginEnd="@dimen/padding"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/Theme.HBV2.TextViewStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wrapper_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_info_emial"
                    style="@style/Theme.HBV2.TextViewStyle"
                    android:layout_marginEnd="@dimen/padding"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/user_email"
                    style="@style/Theme.HBV2.TextViewStyle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/lilac">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_wrapper_phoneNr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_info_phoneNr"
                    style="@style/Theme.HBV2.TextViewStyle"
                    android:layout_marginEnd="@dimen/padding"
                    android:text="@string/phoneNumber" />

                <TextView
                    android:id="@+id/user_phoneNr"
                    style="@style/Theme.HBV2.TextViewStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wrapper_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_info_address"
                    style="@style/Theme.HBV2.TextViewStyle"
                    android:layout_marginEnd="@dimen/padding"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/user_address"
                    style="@style/Theme.HBV2.TextViewStyle" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/update_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_margin"
            android:text="@string/edit_user"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>