<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/fragment_margin"
    android:layout_marginRight="@dimen/fragment_margin"
    android:layout_marginTop="@dimen/fragment_margin"
    android:layout_marginBottom="@dimen/fragment_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/pale_yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="@dimen/fragment_margin"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/question_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_weight_text"
                android:theme="@style/Theme.HBV2.TextViewStyle"
                android:layout_marginStart="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/fragment_margin"
                android:layout_marginBottom="@dimen/fragment_margin"/>

            <TextView
                android:id="@+id/question_weight"
                android:text="@string/question_weight_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/fragment_margin"
                android:layout_marginBottom="@dimen/fragment_margin"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_no_of_answers_text"
                android:theme="@style/Theme.HBV2.TextViewStyle"
                android:layout_marginStart="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/fragment_margin"
                android:layout_marginBottom="@dimen/fragment_margin"/>

            <TextView
                android:id="@+id/question_no_of_answers"
                android:text="@string/question_no_of_answers_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/fragment_margin"
                android:layout_marginBottom="@dimen/fragment_margin"
                android:layout_weight="3.2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_question_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_margin"
                android:text="@string/view_button_text"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_question_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_margin"
                android:text="@string/add_question_button_text"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>